[metadata]
name = indico-plugin-payment-transfermovil
version = 0.0.1
author = MarcosHCK
author_email = marcoshck16@gmail.com
classifiers =
    Environment :: Plugins
    Environment :: Web Environment

[options]
packages = find:
zip_safe = false
include_package_data = true
install_requires = indico >= 3.0

[options.entry_points]
indico.plugins = payment_transfermovil = indico_payment_transfermovil.plugin:TransfermovilPaymentPlugin
