[metadata]
author = MarcosHCK
author_email = marcoshck16@gmail.com
classifiers =
    Environment :: Plugins
    Environment :: Web Environment
    Framework :: Flask
    Programming Language :: Python :: 3.9
license = GPLv3
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
name = indico-plugin-payment-enzona
url = https://github.com/MarcosHCK/indico-plugins-hck/
version = attr: indico_payment_enzona.__version__

[options]
packages = find:
zip_safe = false
include_package_data = true
install_requires = 
    enzona_transfermovil >= 1.0.0
    Flask >= 2.3.2
    Flask-PluginEngine >= 0.4.1
    indico >= 3.0
    Werkzeug >= 2.3.6
    WTForms >= 3.0.1

[options.entry_points]
indico.plugins = payment_enzona = indico_payment_enzona.plugin:EnzonaPaymentPlugin
